--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
     font-family: Arial, sans-serif;
   }
   
-  body {
+  body.map-view {
     overflow: hidden;
   }
   
@@ -56,7 +56,7 @@
   }
   
   .btn-search {
-    background-color: #007bff;
+    background-color: #27358c;
     color: white;
     border-radius: 50px;
     padding: 10px 20px;
@@ -65,8 +65,17 @@
   }
   
   .btn-search:hover {
-    background-color: #0056b3;
+    background-color: #1e2a6e;
     transform: scale(1.05);
+  }
+  
+  .btn-primary {
+    background-color: #0056b3;
+    color: white;
+    border-radius: 50px;
+    padding: 10px 20px;
+    border: none;
+    transition: all 0.3s ease;
   }
   
   .search-icon {
