--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -424,3 +424,17 @@ body {
   padding: 15px;
   max-width: 300px;
 }
+
+@media screen and (max-width: 980px) {
+  .search-container{
+    display: none;
+  }
+  
+}
+@media screen and (max-width:700px) {
+  .sidebar-right , .sidebar{
+    display: none;
+  }
+  
+}
+
